<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_nav_personal"
            android:icon="@drawable/ic_personal"
            android:title="@string/person_center" />
        <item
            android:id="@+id/menu_nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/set_center" />
        <item
            android:id="@+id/menu_nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/menu_nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>