<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qmui_divider_bottom_bitmap"
        android:hint="@string/account"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/qmui_divider_bottom_bitmap"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>